# drip

./: .env.example  .gitignore  .locusbuild  BUSINESS_PLAN.md  DESIGN_AGENT_PROMPT.md  Dockerfile  GEMINI.md  README.md  SDK_CHANGE_AUDIT.md  deepseek_model_business.docx  drip-landing-page-design-prompt.md  locus_drip.db-shm  locus_drip.db-wal  requirements.txt  shagunprasad-main-eng-review-test-plan-20260420-212914.md  smoke_test.py
.agents/skills/benchmark/: SKILL.md
.agents/skills/browse/: SKILL.md
.agents/skills/checkpoint/: SKILL.md
.agents/skills/connect-chrome/: SKILL.md
.agents/skills/context-restore/: SKILL.md
.agents/skills/context-save/: SKILL.md
.agents/skills/design-shotgun/: SKILL.md
.agents/skills/gstack-autoplan/: SKILL.md
.agents/skills/gstack-benchmark-models/: SKILL.md
.agents/skills/gstack-canary/: SKILL.md
.agents/skills/gstack-cso/: SKILL.md
.agents/skills/gstack-design-consultation/: SKILL.md
.agents/skills/gstack-design-html/: SKILL.md
.claude/: settings.local.json
locusmeter/: __init__.py  agent.py  auth.py  billing.py  db.py  lifecycle.py  main.py  models.py  webhooks.py
research/: Dockerfile  __init__.py  budget.py  db.py  digest.py  main.py
scratch/: deploy_dashboard.py
sdk/: README.md  pyproject.toml
sdk/drip/: __init__.py  client.py  lifecycle.py  state.py  wallet.py
sdk/examples/: minimal_example.py  research_agent.py
sdk/locus_drip/: client.py  exceptions.py  meter.py  notifications.py  state.py
templates/: base.html  dashboard.html  onboard.html  recharge.html  saas_dashboard.html  signup.html
(+23 files in other folders)
